# chat-kit-playground

./: README.md  SETUP.md  index.html  package-lock.json  package.json
backend/: .env.example  README.md  dev.sh  pyproject.toml  requirements.txt
backend/app/: chatkit_server.py  config.py  main.py  memory_store.py
react/: vite.config.ts
react/src/: Chat.css  index.css
src/: App.tsx  Chat.tsx
